--- a/roles/prep_php/tasks/Ubuntu.yml
+++ b/roles/prep_php/tasks/Ubuntu.yml
@@ -24,25 +24,25 @@
 - name: install additional packages
   apt:
     name:
-      - php{{ php_version }}-fpm
-      - php{{ php_version }}-gd
+      - php8.0-fpm
+      - php8.0-gd
       - "{{ php_db_extension[nc_db_type] }}"
-      - php{{ php_version }}-curl
-      - php{{ php_version }}-xml
-      - php{{ php_version }}-zip
-      - php{{ php_version }}-intl
-      - php{{ php_version }}-mbstring
-      - php{{ php_version }}-json
-      - php{{ php_version }}-bz2
-      - php{{ php_version }}-ldap
-      - php{{ php_version }}-bcmath  
-      - php{{ php_version }}-gmp
+      - php8.0-curl
+      - php8.0-xml
+      - php8.0-zip
+      - php8.0-intl
+      - php8.0-mbstring
+      - php8.0-sql
+      - php8.0-bz2
+      - php8.0-ldap
+      - php8.0-bcmath  
+      - php8.0-gmp
       - php-apcu
       - php-imagick
       - php-smbclient
       - php-redis
     autoremove: true
-    state: latest
+    state: fixed
 
 - name: configure php
   copy:
